runs/official/csb_sdlc_fix_haiku_20260303_163626/mcp-remote-direct/2026-03-03__16-37-00/mcp_webclients-implement-proper-__Mo54BQu/verifier/test-stdout.txt
=== SWE-bench Pro Evaluation ===
Working directory: /app
Config file found at /tests/config.json
Instance ID: unknown
Base commit: unknown
Repo language: unknown
Git status:
fatal: detected dubious ownership in repository at '/app'
To add an exception for this directory, call:

	git config --global --add safe.directory /app
Not a git repository
Applying test patch to set up test environment...
Checking patch packages/components/helpers/url.test.ts...
error: while searching for:
import { getHostname, isExternal, isMailTo, isSubDomain, isURLProtonInternal } from '"'"'@proton/components/helpers/url'"'"';

describe('"'"'isSubDomain'"'"', function () {
    it('"'"'should detect that same hostname is a subDomain'"'"', () => {

error: patch failed: packages/components/helpers/url.test.ts:1
error: packages/components/helpers/url.test.ts: patch does not apply
WARNING: Test patch failed to apply.
Running tests...
jest-haste-map: duplicate manual mock found: fileMock
  The following files share their name; please delete one of them:
    * <rootDir>/applications/drive/__mocks__/fileMock.js
    * <rootDir>/packages/components/__mocks__/fileMock.js

jest-haste-map: duplicate manual mock found: sieve
  The following files share their name; please delete one of them:
    * <rootDir>/applications/drive/__mocks__/sieve.js
    * <rootDir>/packages/components/__mocks__/sieve.js

jest-haste-map: duplicate manual mock found: styleMock
  The following files share their name; please delete one of them:
    * <rootDir>/applications/drive/__mocks__/styleMock.js
    * <rootDir>/packages/components/__mocks__/styleMock.js

jest-haste-map: duplicate manual mock found: fileMock
  The following files share their name; please delete one of them:
    * <rootDir>/packages/components/__mocks__/fileMock.js
    * <rootDir>/applications/account/src/__mocks__/fileMock.js

jest-haste-map: duplicate manual mock found: styleMock
  The following files share their name; please delete one of them:
    * <rootDir>/packages/components/__mocks__/styleMock.js
    * <rootDir>/applications/account/src/__mocks__/styleMock.js

jest-haste-map: duplicate manual mock found: sieve
  The following files share their name; please delete one of them:
    * <rootDir>/packages/components/__mocks__/sieve.js
    * <rootDir>/applications/account/src/__mocks__/sieve.js

jest-haste-map: duplicate manual mock found: mdMock
  The following files share their name; please delete one of them:
    * <rootDir>/applications/calendar/src/__mocks__/mdMock.ts
    * <rootDir>/applications/mail/src/__mocks__/mdMock.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/applications/drive/__mocks__/@proton/srp.ts
    * <rootDir>/packages/components/__mocks__/@proton/srp.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/packages/components/__mocks__/@proton/srp.ts
    * <rootDir>/applications/calendar/src/__mocks__/@proton/srp.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/applications/calendar/src/__mocks__/@proton/srp.ts
    * <rootDir>/applications/account/src/__mocks__/@proton/srp.ts

jest-haste-map: duplicate manual mock found: @proton/srp
  The following files share their name; please delete one of them:
    * <rootDir>/applications/account/src/__mocks__/@proton/srp.ts
    * <rootDir>/applications/mail/src/__mocks__/@proton/srp.ts

FAIL packages/components/helpers/url.test.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /app/packages/components/helpers/url.test.ts:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import { getHostname, isExternal, isMailTo, isSubDomain, isURLProtonInternal } from '@proton/components/helpers/url';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1796:14)
          at runMicrotasks (<anonymous>)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.382 s
Ran all test suites matching /packages\/components\/helpers\/url.test.ts|helpers\/url.test.ts/i.
/tests/test.sh: line 156: 0
0: syntax error in expression (error token is "0")
